--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-pelican
-typogrify
-markdown
-ghp-import
+pelican==3.7.1
+typogrify==2.0.7
+Markdown==2.6.8
+ghp-import==0.5.4
+pelican-readtime==0.1.2
