--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
+language: python
+python:
+  - "3.6"
 branches:
   only:
   - src
-language: python
 before_install:
 # installing pt language pack
 - sudo apt-get update && sudo apt-get --reinstall install -qq language-pack-pt
