Adiciona mensagem para não-técnicos

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-.grupyprblog
 *.egg-info/
 *.pyc
 *~
@@ -7,8 +6,10 @@
 .coverage
 .directory
 .env
+.grupyprblog
 .idea/*
 .tox
+.venv
 MANIFEST
 __pycache__
 build/*
